[package]
name = "fse_jobs"
version = "0.1.0"
authors = ["Logan Serino loganserino@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.18.1"
reqwest = {version = "0.10.8", features = ["blocking"]}
csv = "1.1.3" 
geoutils = "0.4.0"